--- a/desafio13/style.css
+++ b/desafio13/style.css
@@ -7,13 +7,12 @@
 }
 
 html, body {
-    background-color: black;
     height: 100vh;
     width: 100vw;
 }
 
 body {
-    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
+    background: url(imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
