--- a/projetos/landing-page/style.css
+++ b/projetos/landing-page/style.css
@@ -26,7 +26,7 @@ body {
 
 .cabecalho-menu {
     display: flex;
-    gap: 32px;
+    gap: 32px; /*estudar */
 }
 
 .cabecalho-menu-item {
@@ -56,9 +56,9 @@ body {
 
 .conteudo-principal-escrito-titulo {
     font-family: 'Righteous', cursive;
-  font-weight: 400;
-  font-size: 64px;
-  color: #FFF2E7;
+    font-weight: 400;
+    font-size: 64px;
+    color: #FFF2E7;
 }
 
 .conteudo-principal-escrito-subtitulo {
