--- a/projetos/teste_AED2/style.css
+++ b/projetos/teste_AED2/style.css
@@ -6,20 +6,32 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-body {
+html {
     background-color: rgb(197, 197, 197);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    height: 100%;
 }
 
-.container {
-    height: 100%;
-    width: 600px;
+body {
     background-color: white;
+    border-radius: 10px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    border: 1px solid red;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px;
+    gap: 1rem;
+    width: 70%;
+    margin: 3% auto;
 }
+
+.h1 {
+    
+}
+
+.funcoes {
+    background-color: rgb(197, 197, 197);
+    padding: 10px;
+    width: 70%;
+    border-radius: 10px;
+}
+
