--- a/projetos/teste_AED2/style.css
+++ b/projetos/teste_AED2/style.css
@@ -9,6 +9,7 @@
 html {
     background-color: rgb(197, 197, 197);
     height: 100%;
+    font-size: 62.5%;
 }
 
 body {
@@ -24,14 +25,30 @@ body {
     margin: 3% auto;
 }
 
-.h1 {
-    
+h1 {
+    font-size: 2.5rem;
 }
 
 .funcoes {
     background-color: rgb(197, 197, 197);
-    padding: 10px;
+    padding: 4px 8px;
     width: 70%;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: .3rem;
+    cursor: pointer;
+}
+
+.seta {
+    text-decoration: none;
+    border: none;
+    background-color: transparent;
+    color: rgba(0, 0, 0, 0.473);
+    font-size: 2rem;
+}
+
+.seta.ativo {
+    transform: rotate(90deg);
 }
 
