--- a/VagasOnline/style.css
+++ b/VagasOnline/style.css
@@ -31,27 +31,58 @@ header a {
 }
 
 .pesquisa {
-    background-color: var(--roxo);
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     flex-direction: column;
     padding: 15px 350px;
+    position: relative;
 }
 
 .pesquisa h2 {
     padding: 10px; 
+    z-index: 2;
 }
 
 .box-pesquisa {
     background-color: white;
-    padding: 10px;
+    padding: 8px;
     color: black;
     width: 100%;
     border-radius: 15px;
+    z-index: 2;
+    font-size: 90%;
+    width: 100%;
+    display: flex;
 }
 
 .box-input {
+    padding: 3px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: column;
+}
 
+.box-input input,
+.box-input input:focus{
+    border: none;
+
+}
+
+button {
+    border: none;
+    background-color: var(--roxo);
+    border-radius: 10px;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.wave-border {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    overflow:auto;
 }
