--- a/VagasOnline/login.css
+++ b/VagasOnline/login.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    background-image: url(style/imagens/_2608d9ba-384e-4ab9-8345-89e5b06cdfac.jpeg);
+    background-image: url(style/imagens/wallpaperflare.com_wallpaper\ \(1\).jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -20,4 +20,30 @@ html {
     height: 450px;
     background-color: white;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.container h1 {
+    position: absolute;
+    top: 50px;
+}
+
+.box-escolhas {
+    display: flex;
+}
+
+.box-min-escolhas {
+    display: flex;
+}
+
+.box-inputs input {
+    padding: 7px;
+    border-color: white;
+    border: none;
+    border-bottom: 1px solid black;
+    width: 100%;
 }
