--- a/VagasOnline/login.css
+++ b/VagasOnline/login.css
@@ -16,8 +16,8 @@ html {
 }
 
 .container {
-    width: 600px;
-    height: 450px;
+    width: 250px;
+    height: 400px;
     background-color: white;
     border-radius: 30px;
     display: flex;
@@ -26,6 +26,7 @@ html {
     flex-direction: column;
     position: relative;
     gap: 5%;
+    padding: 80px;
 }
 
 .container h1 {
@@ -35,16 +36,22 @@ html {
 
 .box-escolhas {
     display: flex;
+    width: 100%;
+    align-items: center;
+    margin-left: 50px;
 }
 
 .box-min-escolhas {
     display: flex;
+    width: 100%;
+
 }
 
 .box-inputs {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    width: 90%;
 }
 
 .box-inputs input {
@@ -53,4 +60,16 @@ html {
     border: none;
     border-bottom: 1px solid black;
     width: 100%;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #626CDE;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 17px;
+    color: white;
+    cursor: pointer;
+    margin-top: -10px;
 }
