--- a/VagasOnline/login.css
+++ b/VagasOnline/login.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 html {
@@ -44,7 +47,7 @@ html {
 .box-min-escolhas {
     display: flex;
     width: 100%;
-
+    gap: 3px;
 }
 
 .box-inputs {
@@ -61,6 +64,10 @@ html {
     border-bottom: 1px solid black;
     width: 100%;
     margin-bottom: 10px;
+}
+
+.box-inputs input:focus {
+    outline: none;   
 }
 
 button {
