--- a/VagasOnline/login.css
+++ b/VagasOnline/login.css
@@ -29,12 +29,18 @@ html {
     flex-direction: column;
     position: relative;
     gap: 5%;
-    padding: 80px;
+    padding: 70px;
 }
 
 .container h1 {
     position: absolute;
     top: 50px;
+    font-size: 40px;
+}
+
+.container > p {
+    position: absolute;
+    bottom: 50px;
 }
 
 .box-escolhas {
@@ -54,7 +60,8 @@ html {
     display: flex;
     flex-direction: column;
     margin: 10px;
-    width: 90%;
+    width: 100%;
+    font-size: 90%;
 }
 
 .box-inputs input {
@@ -62,8 +69,8 @@ html {
     border-color: white;
     border: none;
     border-bottom: 1px solid black;
-    width: 100%;
     margin-bottom: 10px;
+    font-size: 16px;
 }
 
 .box-inputs input:focus {
