--- a/VagasOnline/style.css
+++ b/VagasOnline/style.css
@@ -144,7 +144,13 @@ button {
 }
 
 main {
-    background-color: black;
     height: 100vh;
-    margin: 0 3% 3% 3%
+    margin: 0 3% 3% 3%;
+    
+}
+
+main .vaga {
+    border: 2px solid rgb(160, 160, 160) ;
+    height: 100px;
+    border-radius: 10px;
 }
