--- a/VagasOnline/login/login.css
+++ b/VagasOnline/login/login.css
@@ -7,7 +7,7 @@
 }
 
 html {
-    background-image: url(style/imagens/wallpaperflare.com_wallpaper\ \(1\).jpg);
+    background-image: url(imagens/wallpaperflare.com_wallpaper\ \(1\).jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center bottom;
