--- a/VagasOnline/cadastro/cadastro.css
+++ b/VagasOnline/cadastro/cadastro.css
@@ -30,13 +30,51 @@ main {
     height: 80vh;
     display: flex;
     flex-direction: column;
-    /* align-items: center;
-    justify-content: center; */
     border-radius: 20px;
     padding: 5vh 4vw;
 }
 
 main h1 {
     font-weight: 600;
+}
+
+.tab-buttons {
+    display: flex;
+    gap: 6px;
+    width: 100%;
+}
+
+.tab-btn {
+    width: 100%;
+    font-weight: 500;
+    padding: 7px;
+    background-color: white;
+    border-radius: 5px 5px 0 0;
+    cursor: pointer;
+    transition: background-color .5s ease;
+}
+.tab-btn.active {
+    background-color: #626cde44;
+}
+.tab-btn:hover {
+    background-color: #626cde44;
+}
+
+.tab-contents {
+    height: 100%;
+    width: 100%;
+    border-radius: 0 0 5px 5px;
+}
+
+.content {
+    display: none;
+}
+.content.show{
+    display: flex;
+    gap: 14px;
+    background-color: #626cde44;
+    padding: 16px;
+    border-radius: 0 0 10px 10px;
+    height: 100%;
 }
 
