--- a/VagasOnline/home/home.css
+++ b/VagasOnline/home/home.css
@@ -64,7 +64,7 @@ header a:first-child {
 
 .pesquisa h2 {
     padding: 10px; 
-    z-index: 2;
+    z-index: 1;
     text-wrap: nowrap;
 }
 
@@ -74,7 +74,7 @@ header a:first-child {
     color: black;
     width: 100%;
     border-radius: 15px;
-    z-index: 2;
+    z-index: 1;
     font-size: 90%;
     width: 100%;
     display: flex;
@@ -153,4 +153,121 @@ main .vaga {
     border: 2px solid rgb(160, 160, 160) ;
     height: 100px;
     border-radius: 10px;
+}
+
+#btn-cadastrar-vaga {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    padding: 15px;
+    font-weight: 600;
+    font-size: 1.1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+#btn-cadastrar-vaga i {
+    font-size: 1.8rem;
+}
+#btn-cadastrar-vaga.show {
+    display: flex;
+}
+
+.cadastrar-vaga {
+    width: 600px;
+    height: 250px;
+    background-color: #a8b0ff;
+    border: 1px solid black;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    border-radius: 20px;
+    padding: 40px;
+    z-index: 3;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.cadastrar-vaga.show {
+    display: flex;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.521);
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+.overlay.show {
+    display: block;
+}
+
+#fechar {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 15px;
+    height: 15px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+#fechar i {
+    font-size: 1.3rem;
+}
+
+.cadastrar-vaga h1 {
+    position: absolute;
+    top: 20px;
+}
+
+.container-inputs {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+    flex-direction: column;
+    width: 100%;
+}
+
+.aux {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+input {
+    padding: 7px;
+    border-color: white;
+    border: none;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.226);
+    margin-bottom: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+input:focus {
+    outline: none;
+}
+
+#descricao {
+    height: 100%;
+}
+
+#btn-cadastrar-vaga2 {
+    margin-bottom: -30px;
+    margin-top: 20px;
+    padding: 15px;
+    font-size: 1.1rem;
 }
